fix In GalleryView description of image does not overflow image at the bottom

--- a/src/components/Image.module.css
+++ b/src/components/Image.module.css
@@ -1,32 +1,40 @@
 .imageContainer {
   position: relative;
   max-width: 30rem;
-  max-height: 20rem;
+  max-height: 35rem;
   /*min-width: 15rem;*/
   text-align: left;
   margin: 5px;
   overflow: hidden;
+
+
 }
 .imageContainer:hover {
-  box-shadow: 2px 2px 2px 2px rgba(239, 147, 43, 0.3);
+  opacity: 0.9;
+}
+.cardHolder {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
 }
 
 .image {
   width: 30rem;
-  height: 30rem;
+  height: 20rem;
   max-width:30rem;
-  max-height:30rem;
+  max-height:25rem;
   background: no-repeat center/cover ;
 
 
 }
 
 .imageText {
-  height: 25%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  height: 5rem;
+  /*position: absolute;*/
+  /*bottom: 0;*/
+  /*right: 0;*/
+  /*left: 0;*/
+
   background-color: rgba(255, 255, 255, 0.9);
   color: rgb(10, 10, 10);
   padding-left: 10px;
@@ -38,6 +46,7 @@
   grid-auto-flow: row;
   justify-items: left;
   row-gap: 1px;
+
 }
 
 
